Fix height of gallery items

--- a/html/app/themes/bpba/less/objects/_gallery.less
+++ b/html/app/themes/bpba/less/objects/_gallery.less
@@ -87,7 +87,7 @@
 
   .gallery__item {
     width: 26.07033%;
-    min-height: 107px;
+    height: auto;
   }
 
   //  Reset left padding for right items
