Convert colours to RGB

--- a/html/app/themes/bpba/less/_variables.less
+++ b/html/app/themes/bpba/less/_variables.less
@@ -5,10 +5,10 @@
 
 //  Brand Colours
 
-@brand--black: #333;
-@brand--grey: #ccc;
-@brand--grey-dark: #444;
-@brand--white: #fff;
+@brand--black: rgb(51, 51, 51);
+@brand--grey: rgb(204, 204, 204);
+@brand--grey-dark: rgb(68, 68, 68);
+@brand--white: rgb(255, 255, 255);
 
 @brand--blue: rgb(25,63,126);
 @brand--blue-dark: rgb(18,48,93);
