Update sign up button on registration page

--- a/html/app/themes/bpba/less/styles/_register.less
+++ b/html/app/themes/bpba/less/styles/_register.less
@@ -21,13 +21,13 @@
 
 #buddypress .standard-form div.submit input{
 
-    background: #d6b148;
-    background: -moz-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d6b148), color-stop(100%, #bc9c3f));
-    background: -webkit-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
-    background: -o-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
-    background: -ms-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
-    background: linear-gradient(to bottom, #d6b148 0%, #bc9c3f 100%);
+    background: @brand--green;
+    background: -moz-linear-gradient(top, @brand--green 0%, @brand--green-dark 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, @brand--green), color-stop(100%, @brand--green-dark));
+    background: -webkit-linear-gradient(top, @brand--green 0%, @brand--green-dark 100%);
+    background: -o-linear-gradient(top, @brand--green 0%, @brand--green-dark 100%);
+    background: -ms-linear-gradient(top, @brand--green 0%, @brand--green-dark 100%);
+    background: linear-gradient(to bottom, @brand--green 0%, @brand--green-dark 100%);
         border-radius: 7.25px;
         font-family: 'Didot W01 Roman', Helvetica, Arial, sans-serif;
     color: #ffffff;
@@ -42,8 +42,7 @@
 }
 
 #buddypress .standard-form div.submit input:hover {
-    -webkit-box-shadow: 0 0 7.25px 3px #d6b148;
-    -moz-box-shadow: 0 0 7.25px 3px #d6b148;
-    box-shadow: 0 0 7.25px 3px #d6b148;
+    -webkit-box-shadow: 0 0 7.25px 3px @brand--green;
+    -moz-box-shadow: 0 0 7.25px 3px @brand--green;
+    box-shadow: 0 0 7.25px 3px @brand--green;
 }
-
