--- a/html/app/themes/bpba/less/styles/_block.less
+++ b/html/app/themes/bpba/less/styles/_block.less
@@ -58,9 +58,16 @@
 }
 
 .partners-item__aside {
-  width: 33.333%;
+  width: 100%%;
   padding-right: 14.5px;
   margin-right: 0;
+}
+
+@media screen and (min-width: 765px){
+	.partners-item_aside {
+		width: 33.333%;
+		min-width: 33.333%;
+	}
 }
 
 //
