--- a/html/app/themes/bpba/less/styles/_block.less
+++ b/html/app/themes/bpba/less/styles/_block.less
@@ -63,8 +63,8 @@
   margin-right: 0;
 }
 
-@media screen and (min-width: 765px) {
-	.partners-item_aside {
+@media screen and ( min-width: 768px ) {
+	.partners-item__aside {
 		width: 33.333%;
 		min-width: 33.333%;
 	}
